--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             <div class="shrink-0 w-24">
               <img
                 class="w-full h-auto object-contain"
-                src="assets/images/remsa.jpg"
+                src="assets/images/remsa.JPG"
                 alt="Descripción de la imagen"
               />
             </div>
