edited erick changes

--- a/crude-oil.html
+++ b/crude-oil.html
@@ -299,15 +299,7 @@
 
     <section id="tanker" class="mt-16">
       <div
-        class="flex justify-center items-center bg-cover relative bg-center bg-fixed bg-[url('../images/crude-oil-1.jpg')] h-96"
-      >
-        <div class="absolute inset-0 w-full bg-[#1f232d]/70"></div>
-      </div>
-    </section>
-
-    <section id="tanker">
-      <div
-        class="flex justify-center items-center bg-cover relative bg-center bg-fixed bg-[url('../images/crude-oil-2.JPG')] h-96"
+        class="flex justify-center items-center bg-cover relative bg-center bg-fixed bg-[url('../images/crude-oil-1.jpg')] h-[500px]"
       >
         <div class="absolute inset-0 w-full bg-[#1f232d]/70"></div>
       </div>
