--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         </p>
         <ul class="list-disc mt-8 text-muted px-8">
           <li>Ultra Low Sulfur Diesel (ULSD).</li>
-          <li>Low-sulfur diesel (LSD).</li>
+          <li>Low-sulfur diesel (ULSD).</li>
           <li>Unleaded petrol 87 (UNL87).</li>
           <li>Unleaded gasoline 91 (UNL91).</li>
           <li>Fuel/VLSFO with maximum of 0.5% sulfur grade IMO2020.</li>
@@ -397,7 +397,7 @@
             <div class="shrink-0 w-24">
               <img
                 class="w-full h-auto object-contain"
-                src="assets/images/usa_flag.jpg"
+                src="assets/images/usa_flag.JPG"
                 alt="Descripción de la imagen"
               />
             </div>
@@ -444,7 +444,7 @@
             <div class="shrink-0 w-24">
               <img
                 class="w-full h-auto object-contain"
-                src="assets/images/petrogenesis.JPG"
+                src="assets/images/petrogenesis.jpg"
                 alt="Descripción de la imagen"
               />
             </div>
@@ -458,7 +458,7 @@
             <div class="shrink-0 w-24">
               <img
                 class="w-full h-auto object-contain"
-                src="assets/images/remsa.jpg"
+                src="assets/images/remsa.JPG"
                 alt="Descripción de la imagen"
               />
             </div>
@@ -483,14 +483,14 @@
             <div class="shrink-0 w-24">
               <img
                 class="w-full h-auto object-contain"
-                src="assets/images/petrogenesis.JPG"
+                src="assets/images/petrogenesis.jpg"
                 alt="Descripción de la imagen"
               />
             </div>
             <div class="shrink-0 w-24">
               <img
                 class="w-full h-auto object-contain"
-                src="assets/images/remsa.jpg"
+                src="assets/images/remsa.JPG"
                 alt="Descripción de la imagen"
               />
             </div>
