--- a/natural-gas.html
+++ b/natural-gas.html
@@ -331,15 +331,7 @@
 
     <section id="tanker" class="mt-16">
       <div
-        class="flex justify-center items-center bg-cover relative bg-center bg-fixed bg-[url('../images/natural_gas.jpeg')] h-96"
-      >
-        <div class="absolute inset-0 w-full bg-[#1f232d]/70"></div>
-      </div>
-    </section>
-
-    <section id="tanker">
-      <div
-        class="flex justify-center items-center bg-cover relative bg-center bg-fixed bg-[url('../images/natural_gas_2.JPG')] h-96"
+        class="flex justify-center items-center bg-cover relative bg-center bg-fixed bg-[url('../images/natural_gas.jpeg')] h-[500px]"
       >
         <div class="absolute inset-0 w-full bg-[#1f232d]/70"></div>
       </div>
