--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
               <li class="text-white/40 text-sm">Phone: +1 956-728-7257.</li>
 
               <li class="text-white/40 text-sm">
-                Laredo Texas, - U.S.A. – Norteamérica.
+                Laredo Texas, - U.S.A. – United States of America
               </li>
 
               <li class="text-white/40 text-sm">
