--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
       <div class="absolute bottom-0 left-0 p-8">
         <div>
           <p class="text-2xl mb-2 font-bold">How can we help you?</p>
-          <p class="mb-1 font-semibold">Phone: (1) 956 7287257</p>
+          <p class="mb-1 font-semibold">Phone: +1 956-728-7257</p>
           <p class="mb-1 font-semibold">
             Email: info@visioninternationalpetroleum.com
           </p>
