--- a/index.html
+++ b/index.html
@@ -677,9 +677,7 @@
               </li>
               <li class="text-white/40 text-sm">Phone: +1 956-728-7257.</li>
 
-              <li class="text-white/40 text-sm">
-                Laredo Texas, - U.S.A. – United States of America
-              </li>
+              <li class="text-white/40 text-sm">Laredo Texas, - U.S.A.</li>
 
               <li class="text-white/40 text-sm">
                 Email: info@visioninternationalpetroleum.com
