--- a/scope.html
+++ b/scope.html
@@ -454,9 +454,7 @@
               </li>
               <li class="text-white/40 text-sm">Phone: +1 956-728-7257.</li>
 
-              <li class="text-white/40 text-sm">
-                Laredo Texas, - U.S.A. – Norteamérica.
-              </li>
+              <li class="text-white/40 text-sm">Laredo Texas, - U.S.A.</li>
 
               <li class="text-white/40 text-sm">
                 Email: info@visioninternationalpetroleum.com
